chore: refactored commands so both types are in the same file

--- a/DIscordTestBotTotallyStillTheFirstAttemptUwU.csproj
+++ b/DIscordTestBotTotallyStillTheFirstAttemptUwU.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SlashCommands\" />
+  </ItemGroup>
+
 </Project>
